syntax = "proto3";

package calendar;

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = ".;api";

service CalendarService {
	// info
	//health
	//info

	// Users
	rpc Register (ReqRegister) returns (google.protobuf.Empty) {}
	rpc Login(ReqLogin) returns (ResLogin){}
	rpc GetUser (google.protobuf.Empty) returns (ResUser) {}
	rpc DeleteUser (google.protobuf.Empty) returns (google.protobuf.Empty) {}

	// Events
	rpc CreateEvent (ReqCreateEvent) returns (ResCreateEvent) {}
	rpc GetEvent (ReqGetEvent) returns (ResEvent) {}
	rpc ListEvents (ReqListEvents) returns (ResListEvents) {}
	rpc UpdateEvent (ReqUpdateEvent) returns (google.protobuf.Empty) {}
	rpc DeleteEvent (ReqDeleteEvent) returns (google.protobuf.Empty) {}
}

message ReqRegister {
	string username = 1;
	string password = 2;
	string email = 3;
}

message ReqLogin {
	string username = 1;
	string password = 2;
}

message ResLogin {
	string access_token = 1;
}

message ResUser {
	string name = 1;
	string email = 2;
	string role = 3;
}

message ReqCreateEvent{
	string title = 1;
	string description = 2;
	google.protobuf.Timestamp start_time = 3;
	google.protobuf.Timestamp end_time = 4;
	google.protobuf.Duration notify_before = 5;
}

message ResCreateEvent {
	string id = 1;
}

message ReqGetEvent {
	string id = 1;
}

message ResEvent {
	string id = 1;
	string title = 2;
	string description = 3;
	google.protobuf.Timestamp start_time = 4;
	google.protobuf.Timestamp end_time = 5;
	google.protobuf.Duration notify_before = 6;
}

message ReqListEvents {
	google.protobuf.Timestamp start_time = 1;
	google.protobuf.Timestamp end_time = 2;
}

message ResListEvents {
	repeated ResEvent events = 1;
}

message ReqUpdateEvent {
	string id = 1;
	string title = 2;
	string description = 3;
	google.protobuf.Timestamp start_time = 4;
	google.protobuf.Timestamp end_time = 5;
	google.protobuf.Duration notify_before = 6;
}

message ReqDeleteEvent {
	string id = 1;
}
